--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
         <div class="app">
           <h2>Tank Lab</h2>
           <p>키보드/터치로 즐기는 기본 연습 게임</p>
-          <p><a href="tank/">열기</a></p>
+          <p><a href="tank/index.html">열기</a></p>
         </div>
         <div class="app">
           <h2>Word Spark</h2>
           <p>오답노트가 자동으로 저장되는 단어 퀴즈</p>
-          <p><a href="word/">열기</a></p>
+          <p><a href="word/index.html">열기</a></p>
         </div>
         <div class="app">
           <h2>Daily Philosopher</h2>
           <p>하루 1문장 생각하고 기록하기</p>
-          <p><a href="philo/">열기</a></p>
+          <p><a href="philo/index.html">열기</a></p>
         </div>
       </div>
     </section>
