--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
       </ol>
     </section>
   </main>
-  <footer><p>© 2025 AI Web Lab</p></footer>
+  <footer><p>© 2025 Brandon AI Lab</p></footer>
 </body>
 </html>
