--- a/index.html
+++ b/index.html
@@ -44,13 +44,8 @@
       </div>
     </section>
     <section class="card">
-      <h2>제출용 메모</h2>
-      <ol>
-        <li>GitHub에 <code>ai-web-lab</code> 저장소 생성</li>
-        <li>이 폴더 전체 업로드</li>
-        <li>Settings → Pages에서 배포 후 URL 복사</li>
-        <li>보고서에 최종 URL과 스크린샷 첨부</li>
-      </ol>
+      <h2>Brandon Seo의 AI연구소</h2>
+      <p>반갑습니다. 대모초등학교 1학년 서유현입니다. 실생활에 필요한 게임, 학습, 철학 프로그램입니다. 많은 사람들이 사용할 수 있도록 오픈합니다.</p>
     </section>
   </main>
   <footer><p>© 2025 Brandon AI Lab</p></footer>
