--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </section>
     <section class="card">
       <h2>Brandon Seo의 AI연구소</h2>
-      <p>반갑습니다. 대왕중학교 1학년 서유현입니다. 실생활에 필요한 게임, 학습, 철학 프로그램입니다. 많은 사람들이 사용할 수 있도록 오픈합니다.</p>
+      <p>반갑습니다. 대왕중학교 1학년 서유현입니다. 실생활에 필요한 게임, 학습, 철학 프로그램입니다. 많은 사람들이 사용할 수 있도록 오픈합니다!</p>
     </section>
   </main>
   <footer><p>© 2025 Brandon AI Lab</p></footer>
